[package]
name = "led-matrix-controller"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Klaus"]
license = "GPL-3.0"
default-run = "main"

[dependencies]
rpi-led-matrix = { version = "0.4.0", optional = true}
cascade = "1.0.0"
embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.4.0", optional = true}
nalgebra = "0.31.1"
wavefront_obj = "10.0.0"

[features]
default = ["rpi-led-matrix"]

[[bin]]
name = "main"
path = "src/main.rs"
required-features = ["rpi-led-matrix"]

# cargo run with --no-default-features flag
[[bin]]
name = "simulate-display"
path = "src/simulated_display.rs"
required-features = ["embedded-graphics-simulator"]
