[package]
name = "dmx-led-controller"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Klaus"]
license = "GPL-3.0"
default-run = "main"

[dependencies]
dlcl = { path = "../dlcl"}
rpi-led-matrix = { version = "0.4.0", optional = true}
embedded-graphics-simulator = { version = "0.4.0", optional = true}
cascade = "1.0.0"
embedded-graphics = "0.7.1"
nalgebra = "0.32.2"
wavefront_obj = "10.0.0"
regex = "1"
derive-try-from-primitive = "1.0.0"
scan_fmt = "0.2.6"
measurements = "0.11.0"
strum = "0.24.1"
strum_macros = "0.24"

[features]
default = ["rpi-led-matrix"]

[[bin]]
name = "main"
path = "src/main_hardware_display.rs"
required-features = ["rpi-led-matrix"]

# cargo run with --no-default-features flag
[[bin]]
name = "simulate-display"
path = "src/main_simulated_display.rs"
required-features = ["embedded-graphics-simulator"]
