[package]
name = "dmx-led-controller"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Klaus"]
license = "GPL-3.0"
default-run = "main"

[dependencies]
dlcl = { path = "../dlcl"}
rpi-led-matrix = { version = "0.4.0", optional = true}
embedded-graphics-simulator = { version = "0.5.0", optional = true}
cascade = "1.0.0"
embedded-graphics = "0.8.1"
tokio = "1.32.0"
hyper = "0.14.27"
tower = "0.4.13"

[features]
default = ["rpi-led-matrix"]

[[bin]]
name = "main"
path = "src/main_hardware_display.rs"
required-features = ["rpi-led-matrix"]

# cargo run with --no-default-features flag
[[bin]]
name = "simulate-display"
path = "src/main_simulated_display.rs"
required-features = ["embedded-graphics-simulator"]
