[package]
name = "dlcl"
version = "0.1.0"
edition = "2021"
authors = ["Ole Weinert"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["auto-initialize", "macros", "pyo3-macros"] }
embedded-graphics-simulator = { version = "0.5.0", optional = true}
embedded-graphics = "0.8.1"
once_cell = "1.18.0"

[lib]
name = "dlcl"
path = "src/lib.rs"
