[package]
name = "dlcl"
version = "0.1.0"
edition = "2021"
authors = ["Ole Weinert"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["auto-initialize", "macros", "pyo3-macros"] }
embedded-graphics-simulator = "0.5.0"
embedded-graphics = "0.8.1"
once_cell = "1.18.0"
iter_tools = "0.1.4"

[lib]
name = "dlcl"
path = "src/lib.rs"
