[package]
name = "dlcl"
version = "0.1.0"
edition = "2021"
authors = ["Ole Weinert"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["auto-initialize", "macros", "pyo3-macros"] }
embedded-graphics-simulator = "0.5.0"
embedded-graphics = "0.8.1"
once_cell = "1.18.0"
iter_tools = "0.1.4"
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"
unbox-box = "0.1.0"

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "dlcl"
path = "src/lib.rs"
